[gd_scene load_steps=30 format=3 uid="uid://o8v3t6xag0xt"]

[ext_resource type="Script" path="res://src/foley_vr.gd" id="1_qksgx"]
[ext_resource type="Script" path="res://src/animations/scenes/intro_control.gd" id="2_5xxcy"]
[ext_resource type="PackedScene" path="res://addons/godot-xr-tools/misc/vr_common_shader_cache.tscn" id="2_u4ahu"]
[ext_resource type="PackedScene" uid="uid://clujaf3u776a3" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" id="3_0lxao"]
[ext_resource type="PackedScene" uid="uid://wpyooe40oqia" path="res://src/player/scenes/left_controller.tscn" id="3_0w83j"]
[ext_resource type="PackedScene" uid="uid://cgij6m84jpu70" path="res://src/player/scenes/right_controller.tscn" id="4_kbx6j"]
[ext_resource type="PackedScene" uid="uid://d2wvaagg3f6x1" path="res://src/animations/scenes/intro.tscn" id="5_grmiw"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="5_s8xsf"]
[ext_resource type="Script" path="res://src/player/scenes/left_controller.gd" id="7_f3aav"]
[ext_resource type="Texture2D" uid="uid://bdpixtrtrf0ce" path="res://src/images/fog_texture.webp" id="8_1hqiw"]
[ext_resource type="PackedScene" uid="uid://0xlsitpu17r1" path="res://addons/godot-xr-tools/functions/movement_footstep.tscn" id="8_i6ppy"]
[ext_resource type="Script" path="res://src/player/scenes/right_controller.gd" id="8_wfild"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/overrides/ground_physics_settings.gd" id="12_hv42w"]
[ext_resource type="PackedScene" uid="uid://cwqqvtglx7fed" path="res://src/objects/scenes/pickables/pickable_coin.tscn" id="13_1cm6l"]
[ext_resource type="PackedScene" uid="uid://w4jlra5vdbdo" path="res://src/objects/scenes/pantheon_3.tscn" id="13_4fmdd"]
[ext_resource type="PackedScene" uid="uid://bp140hspkrypt" path="res://src/animations/scenes/tutor.tscn" id="13_km0jf"]
[ext_resource type="PackedScene" uid="uid://c221i7f6xpuk5" path="res://src/objects/scenes/arch_video.tscn" id="16_rwd2b"]
[ext_resource type="PackedScene" uid="uid://gjqlvc1ssxjd" path="res://src/objects/scenes/pickables/pickable_star.tscn" id="16_xedbe"]
[ext_resource type="PackedScene" uid="uid://c6x5jjgtt6ib4" path="res://src/animations/scenes/student.tscn" id="18_4gqs3"]
[ext_resource type="PackedScene" uid="uid://fha36rnpl7lj" path="res://src/animations/scenes/rewardees/tutor.tscn" id="18_5fn1r"]
[ext_resource type="PackedScene" uid="uid://quwb7t0ragm2" path="res://src/objects/scenes/pickables/pickable_handshake.tscn" id="19_cno6g"]
[ext_resource type="PackedScene" uid="uid://dfbdxd5c21xnd" path="res://src/animations/scenes/connector.tscn" id="20_hly4d"]
[ext_resource type="PackedScene" uid="uid://6shd6xdqgwbd" path="res://src/animations/scenes/rewardees/student.tscn" id="21_kb7qx"]
[ext_resource type="PackedScene" uid="uid://dii211rglt1jm" path="res://src/animations/scenes/rewardees/connector.tscn" id="23_kxbis"]

[sub_resource type="Resource" id="Resource_lfnh1"]
script = ExtResource("12_hv42w")
flags = 0
move_drag = 5.0
move_traction = 30.0
stop_on_slope = false
move_max_slope = 45.0
jump_max_slope = 45.0
jump_velocity = 3.0
bounciness = 0.0
bounce_threshold = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_bv5lt"]
size = Vector3(0.25, 2, 0.25)

[sub_resource type="Environment" id="Environment_23npv"]
background_mode = 1
background_color = Color(0.929412, 0.945098, 0.952941, 1)
background_energy_multiplier = 0.75
fog_enabled = true
fog_light_color = Color(0.615686, 0.698039, 1, 1)
fog_light_energy = 0.3
fog_density = 0.005

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_03qmg"]
shading_mode = 0
albedo_texture = ExtResource("8_1hqiw")
billboard_mode = 1
proximity_fade_enabled = true
proximity_fade_distance = 142.6
distance_fade_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_4ojt0"]
material = SubResource("StandardMaterial3D_03qmg")
size = Vector2(100, 100)

[node name="Main" type="Node"]
script = ExtResource("1_qksgx")

[node name="XROrigin3D" type="XROrigin3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.50039, 0, 0)

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.285168, 0.690662, 8.22228)

[node name="VRShaderCache" parent="XROrigin3D/XRCamera3D" instance=ExtResource("2_u4ahu")]

[node name="IntroControl" type="Node3D" parent="XROrigin3D/XRCamera3D"]
script = ExtResource("2_5xxcy")

[node name="Intro" parent="XROrigin3D/XRCamera3D/IntroControl" instance=ExtResource("3_0lxao")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.12883, -12.6862)
screen_size = Vector2(16, 9)
viewport_size = Vector2(1920, 1080)
scene = ExtResource("5_grmiw")
collision_layer = 1048576

[node name="LeftController" parent="XROrigin3D" instance=ExtResource("3_0w83j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.98439, 1.40333, 0)
script = ExtResource("7_f3aav")

[node name="RightController" parent="XROrigin3D" instance=ExtResource("4_kbx6j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.78295, 1.47702, 0)
script = ExtResource("8_wfild")

[node name="FootstepDetector" parent="XROrigin3D" instance=ExtResource("8_i6ppy")]
steps_per_meter = 2.0

[node name="Player" parent="XROrigin3D" instance=ExtResource("5_s8xsf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1075, -1.47959, 20)
physics = SubResource("Resource_lfnh1")

[node name="PlayerCollision" type="CollisionShape3D" parent="XROrigin3D/Player"]
shape = SubResource("BoxShape3D_bv5lt")

[node name="Pantheon" parent="." instance=ExtResource("13_4fmdd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.456, -5.614, 2.66581)

[node name="TutorArch" parent="Pantheon" instance=ExtResource("16_rwd2b")]
transform = Transform3D(1.13247e-07, 0, -1.5, 0, 1.5, 0, 1.5, 0, 1.13247e-07, 3.21403, 1.29579, -35.7204)
video_scene = ExtResource("13_km0jf")
time_keys = Array[int]([10, 20])
object_values = Array[PackedScene]([ExtResource("13_1cm6l"), ExtResource("16_xedbe")])

[node name="Tutor" parent="Pantheon/TutorArch" instance=ExtResource("18_5fn1r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.367393, 0, -2.05675)

[node name="StudentArch" parent="Pantheon" instance=ExtResource("16_rwd2b")]
transform = Transform3D(-1.5, 0, -2.26494e-07, 0, 1.5, 0, 2.26494e-07, 0, -1.5, 34.4336, 1.40348, 0)
video_scene = ExtResource("18_4gqs3")
time_keys = Array[int]([30, 15])
object_values = Array[PackedScene]([ExtResource("16_xedbe"), ExtResource("19_cno6g")])

[node name="Student" parent="Pantheon/StudentArch" instance=ExtResource("21_kb7qx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0386944, -0.0361578, -2.16188)

[node name="ConnectorArch" parent="Pantheon" instance=ExtResource("16_rwd2b")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -34.049, 1.34263, 0)
video_scene = ExtResource("20_hly4d")
time_keys = Array[int]([8, 14])
object_values = Array[PackedScene]([ExtResource("13_1cm6l"), ExtResource("19_cno6g")])

[node name="Connector" parent="Pantheon/ConnectorArch" instance=ExtResource("23_kxbis")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.617836, 0, -3.19213)

[node name="Lights" type="Node3D" parent="."]

[node name="SkyLight" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(0.792756, -0.0983153, -0.601557, 0.441799, -0.587251, 0.678197, -0.419942, -0.803412, -0.422111, 1.85191, 29.6341, -9.7104)
light_energy = 1.5
directional_shadow_mode = 0

[node name="HeavenlyLight" type="SpotLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, -0.970266, -0.24204, 0, 0.24204, -0.970266, 0, 59.9668, -5.74279)
light_energy = 13.737
light_indirect_energy = 0.0
light_specular = 16.0
spot_range = 108.722
spot_angle = 48.07
spot_angle_attenuation = 0.420448

[node name="DomeLight" type="SpotLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 0.0145381, -0.999894, 0, 0.999894, 0.0145381, 0, -8.13849, -5.74279)
light_energy = 13.737
light_indirect_energy = 0.0
light_specular = 16.0
spot_range = 117.685
spot_attenuation = 1.07177
spot_angle = 36.07
spot_angle_attenuation = 0.420448

[node name="Background" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_23npv")

[node name="MouthFog" type="Node3D" parent="Background"]

[node name="CenterFog" type="MeshInstance3D" parent="Background/MouthFog"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54362, 6.46952, 69.46)
mesh = SubResource("QuadMesh_4ojt0")
skeleton = NodePath("../..")

[node name="LeftFog" type="MeshInstance3D" parent="Background/MouthFog"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.8253, 12.939, 40.8189)
mesh = SubResource("QuadMesh_4ojt0")

[node name="RightFog" type="MeshInstance3D" parent="Background/MouthFog"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.4768, 10.4426, 37.4892)
mesh = SubResource("QuadMesh_4ojt0")
skeleton = NodePath("../LeftFog")

[node name="HallwayFog" type="MeshInstance3D" parent="Background/MouthFog"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.216811, 5.27761, 30.2042)
mesh = SubResource("QuadMesh_4ojt0")

[node name="EnterWebXR" type="CanvasLayer" parent="."]

[node name="EnterVRButton" type="Button" parent="EnterWebXR"]
offset_right = 121.0
offset_bottom = 59.0
text = "Enter VR"

[connection signal="button_pressed" from="XROrigin3D/RightController" to="XROrigin3D/XRCamera3D/IntroControl" method="_on_right_controller_button_pressed"]
[connection signal="object_changed" from="Pantheon/TutorArch" to="XROrigin3D/LeftController" method="_on_arch_object_changed"]
[connection signal="object_changed" from="Pantheon/TutorArch" to="XROrigin3D/RightController" method="_on_arch_object_changed"]
[connection signal="object_changed" from="Pantheon/StudentArch" to="XROrigin3D/LeftController" method="_on_arch_object_changed"]
[connection signal="object_changed" from="Pantheon/StudentArch" to="XROrigin3D/RightController" method="_on_arch_object_changed"]
[connection signal="object_changed" from="Pantheon/ConnectorArch" to="XROrigin3D/LeftController" method="_on_arch_object_changed"]
[connection signal="object_changed" from="Pantheon/ConnectorArch" to="XROrigin3D/RightController" method="_on_arch_object_changed"]
[connection signal="pressed" from="EnterWebXR/EnterVRButton" to="." method="_on_enter_webxr_button_pressed"]
